--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 					<p>Sed lacus nascetur ac ante amet sapien.</p>
 					<ul class="actions special">
 						<li><a href="https://drive.google.com/file/d/1trD4LlNFkyuPVt_WCe2h0GQbPtSP6jkK/view?usp=sharing" class="button wide primary">Resume</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
+						<li><a href="https://www.linkedin.com/in/anthonytommaso/" class="button wide">LinkedIn</a></li>
 					</ul>
 				</div>
 			</section>
