--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<header class="major">
 						<h2>Interested in contacting me?</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
+					<p>Check out my resume & my LinkedIn.</p>
 					<ul class="actions special">
 						<li><a href="https://drive.google.com/file/d/1trD4LlNFkyuPVt_WCe2h0GQbPtSP6jkK/view?usp=sharing" class="button wide primary">Resume</a></li>
 						<li><a href="https://www.linkedin.com/in/anthonytommaso/" class="button wide">LinkedIn</a></li>
@@ -446,7 +446,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="atommaso05@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Created by Anthony Tommaso</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
