--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h2>Soft Skills & Language Experience <br />
 								</h2>
 							</header>
-							<p>I am proficient in <b>C++</b>, <b>Python</b>, </p>
+							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, and I am just now experimenting with HTML (hence this website). I am also familar with some Frameworks such as <b>Bootstrap</b> and <b>Flask</b>. I have used <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
 							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
 							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 						</div>
