--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>Hello! I am currently attending CUNY Hunter College in Manhattan. My journey with computer science began with my introduction to Python as a kid, and the evolution of the video game industry throughout time. I enjoy tacking new LeetCode problems, and am particularly interested in other areas like artificial intelligence and web development! Currently, I am sharpening my skills in Swift for iOS development & Unity for desktop games. Feel free to explore my website to learn more about my work & interests. Feel free to connect with me down below!   </p>
+							<p>Hello! I am currently attending CUNY Hunter College in Manhattan. My journey with computer science began with my introduction to Python as a kid, and the evolution of the video game industry throughout time. I enjoy tackling new LeetCode problems, and am particularly interested in other areas like artificial intelligence and web development! Currently, I am sharpening my skills in Swift for iOS development & Unity for desktop games. Feel free to explore my website to learn more about my work & interests. Feel free to connect with me down below!   </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="Anthony Tommaso" /></span>
@@ -63,7 +63,7 @@
 								<h2>Soft Skills & Language Experience <br />
 								</h2>
 							</header>
-							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, and I am just now experimenting with HTML (hence this website). I am also familar with some Frameworks such as <b>Bootstrap</b> and <b>Flask</b>. I have used <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
+							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, and I am just now experimenting with <b>HTML</b> (hence this website). I am also familar with some Frameworks such as <b>Bootstrap</b> and <b>Flask</b>. I have used <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
 							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
 							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 						</div>
@@ -443,7 +443,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="https://github.com/AntTomm" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="atommaso05@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:atommaso05@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Created by Anthony Tommaso</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
