--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="Anthony Tommaso" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Reminder Application</h3>
+							<p>Created in December 2023, this was my first <b>personal</b> project created in Python. It is a reminder application that sends an email to the users email, and gives the user a desktop notification for a specific task they need to remember. It can also be set for a specific time of day.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/AntTomm/ReminderApp" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
