--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<h2>Soft Skills & Language Experience <br />
 								</h2>
 							</header>
-							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, and I am just now experimenting with <b>HTML</b> (hence this website). I am also familar with some Frameworks such as <b>Bootstrap</b> and <b>Flask</b>. I have used <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
+							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, <b>SCSS</b>, and I am just now experimenting with <b>HTML</b> (hence this website). I am also familar with some Frameworks such as <b>Bootstrap</b> and <b>Flask</b>. I frequently use <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
 							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
 							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 						</div>
@@ -81,7 +81,7 @@
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic02.jpg" alt="Anthony Tommaso" /></span>
-							<h3>Reminder Application</h3>
+							<h3><u>Reminder Application</u></h3>
 							<p>Created in December 2023, this was my first <b>personal</b> project created in Python. It is a reminder application that sends an email to the users email, and gives the user a desktop notification for a specific task they need to remember. It can also be set for a specific time of day.</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/AntTomm/ReminderApp" class="button">More</a></li>
@@ -89,16 +89,16 @@
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic03.jpg" alt="Anthony Tommaso" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3><u>Password Generator v1</u></h3>
+							<p>This is a <b>WIP</b>, as it is my first C++ personal project. I am creating a program that will allow the user to generate their own password and include specific symbols, uppercase/lowercase letters, numbers, and makes sure it meets a normal password requirement. The program also randomizes the password. More features to come! </p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/AntTomm/Password-Generator" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="Anthony Tommaso" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3><u>Bronx Analytical Project</u></h3>
+							<p>A class project in my Python class, we tackled multiple Python libraries including <b>matplotlib</b> and <b>numpy</b> to create a highlighted map of a specific neighborhood in the Bronx. This also helped us to create multiple bar graphs to display the effects of carbon dioxide emissions throughout the Bronx. </p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
