--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="Anthony Tommaso" /></span>
 							<h3><u>Bronx Analytical Project</u></h3>
-							<p>A class project in my Python class, we tackled multiple Python libraries including <b>matplotlib</b> and <b>numpy</b> to create a highlighted map of a specific neighborhood in the Bronx. This also helped us to create multiple bar graphs to display the effects of carbon dioxide emissions throughout the Bronx. </p>
+							<p>A group project in my Python class, my team and I tackled multiple Python libraries including <b>matplotlib</b> and <b>numpy</b> to create a highlighted map of 4 specific neighborhoods in the Bronx. This also helped us to create multiple bar graphs to display the effects of carbon dioxide emissions throughout the neighborhoods. Through that, my team and I also used <b>folium</b> and <b>pandas</b> to create an interactive HTML map in Python using CSV files.</p>
 							<ul class="actions special">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
