--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 								</h2>
 							</header>
 							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, <b>SCSS</b>, and I am just now experimenting with <b>HTML</b> (hence this website). I am also familar with some Frameworks such as <b>Bootstrap</b> and <b>Flask</b>. I frequently use <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<p>My coursework & projects have required me to approach things at multiple angles - and consider all <b>edge cases</b>. I am also keen in finding multiple solutions to a problem to see which is the most efficient for runtime and code cleanliness. As I work through my LeetCode & NeetCode, I continue to sharpen these skills. I also strive to clearly convey my ideas and get concepts across clearly to coworkers and my group members in order to make sure everyone understands.</p>
+							<p>I have experimently closely with new Artifical intelligence resources such as <b>ChatGPT 4o</b>, <b>Google Gemini</b>, <b>Microsoft Copilot</b>, <b>DALL-E</b>, and custom ChatGPT creation in 4o. I am enthusiastic about the future of artifical intelligence, and I cannot wait for where it takes the STEM field!</p>
 						</div>
 					</div>
 				</div>
@@ -100,7 +100,7 @@
 							<h3><u>Bronx Analytical Project</u></h3>
 							<p>A group project in my Python class, my team and I tackled multiple Python libraries including <b>matplotlib</b> and <b>numpy</b> to create a highlighted map of 4 specific neighborhoods in the Bronx. This also helped us to create multiple bar graphs to display the effects of carbon dioxide emissions throughout the neighborhoods. Through that, my team and I also used <b>folium</b> and <b>pandas</b> to create an interactive HTML map in Python using CSV files.</p>
 							<ul class="actions special">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/AntTomm/TheBronx" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
