--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Hi, I'm <strong>Anthony Tommaso</strong>, an aspiring<br />
-					game developer & <a href="http://html5up.net">software engineer</a>.</h1>
+					game developer & <a href="">software engineer</a>.</h1>
 					<p>Computer Science Major & Math Minor for Macaulay Honors @ CUNY Hunter College</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
@@ -38,7 +38,7 @@
 							<p>Hello! I am currently attending CUNY Hunter College in Manhattan. My journey with computer science began with my introduction to Python as a kid, and the evolution of the video game industry throughout time. I enjoy tackling new LeetCode problems, and am particularly interested in other areas like artificial intelligence and web development! Currently, I am sharpening my skills in Swift for iOS development & Unity for desktop games. Feel free to explore my website to learn more about my work & interests. Feel free to connect with me down below!   </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="Anthony Tommaso" /></span>
+							<span class="image fit"><img src="images/codeimage.jpg" alt="Anthony Tommaso" /></span>
 						</div>
 					</div>
 				</div>
