--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<p>These are some projects I have worked / been working on. Please feel free to check them out!</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic02.jpg" alt="Anthony Tommaso" /></span>
+							<span class="image fit"><img src="images/clock.png" alt="Anthony Tommaso" /></span>
 							<h3><u>Reminder Application</u></h3>
 							<p>Created in December 2023, this was my first <b>personal</b> project created in Python. It is a reminder application that sends an email to the users email, and gives the user a desktop notification for a specific task they need to remember. It can also be set for a specific time of day.</p>
 							<ul class="actions special">
@@ -88,7 +88,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic03.jpg" alt="Anthony Tommaso" /></span>
+							<span class="image fit"><img src="images/cyber.png" alt="Anthony Tommaso" /></span>
 							<h3><u>Password Generator v1</u></h3>
 							<p>This is a <b>WIP</b>, as it is my first C++ personal project. I am creating a program that will allow the user to generate their own password and include specific symbols, uppercase/lowercase letters, numbers, and makes sure it meets a normal password requirement. The program also randomizes the password. More features to come! </p>
 							<ul class="actions special">
@@ -96,7 +96,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/pic04.jpg" alt="Anthony Tommaso" /></span>
+							<span class="image fit"><img src="images/graph.png" alt="Anthony Tommaso" /></span>
 							<h3><u>Bronx Analytical Project</u></h3>
 							<p>A group project in my Python class, my team and I tackled multiple Python libraries including <b>matplotlib</b> and <b>numpy</b> to create a highlighted map of 4 specific neighborhoods in the Bronx. This also helped us to create multiple bar graphs to display the effects of carbon dioxide emissions throughout the neighborhoods. Through that, my team and I also used <b>folium</b> and <b>pandas</b> to create an interactive HTML map in Python using CSV files.</p>
 							<ul class="actions special">
