--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<h3><u>Reminder Application</u></h3>
 							<p>Created in December 2023, this was my first <b>personal</b> project created in Python. It is a reminder application that sends an email to the users email, and gives the user a desktop notification for a specific task they need to remember. It can also be set for a specific time of day.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/AntTomm/ReminderApp" class="button">More</a></li>
+								<li><a href="https://github.com/AntTomm/ReminderApp" target="_blank" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -92,7 +92,7 @@
 							<h3><u>Password Generator v1</u></h3>
 							<p>This is a <b>WIP</b>, as it is my first C++ personal project. I am creating a program that will allow the user to generate their own password and include specific symbols, uppercase/lowercase letters, numbers, and makes sure it meets a normal password requirement. The program also randomizes the password. More features to come! </p>
 							<ul class="actions special">
-								<li><a href="https://github.com/AntTomm/Password-Generator" class="button">More</a></li>
+								<li><a href="https://github.com/AntTomm/Password-Generator" target="_blank" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -100,7 +100,7 @@
 							<h3><u>Bronx Analytical Project</u></h3>
 							<p>A group project in my Python class, my team and I tackled multiple Python libraries including <b>matplotlib</b> and <b>numpy</b> to create a highlighted map of 4 specific neighborhoods in the Bronx. This also helped us to create multiple bar graphs to display the effects of carbon dioxide emissions throughout the neighborhoods. Through that, my team and I also used <b>folium</b> and <b>pandas</b> to create an interactive HTML map in Python using CSV files.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/AntTomm/TheBronx" class="button">More</a></li>
+								<li><a href="https://github.com/AntTomm/TheBronx" target="_blank" class="button">More</a></li>
 							</ul>
 						</div>
 					</div>
@@ -115,8 +115,8 @@
 					</header>
 					<p>Check out my resume & my LinkedIn.</p>
 					<ul class="actions special">
-						<li><a href="https://drive.google.com/file/d/1trD4LlNFkyuPVt_WCe2h0GQbPtSP6jkK/view?usp=sharing" class="button wide primary">Resume</a></li>
-						<li><a href="https://www.linkedin.com/in/anthonytommaso/" class="button wide">LinkedIn</a></li>
+						<li><a href="https://drive.google.com/file/d/1trD4LlNFkyuPVt_WCe2h0GQbPtSP6jkK/view?usp=sharing" target="_blank" class="button wide primary">Resume</a></li>
+						<li><a href="https://www.linkedin.com/in/anthonytommaso/" target="_blank" class="button wide">LinkedIn</a></li>
 					</ul>
 				</div>
 			</section>
