--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>Hello! I am currently attending CUNY Hunter College in Manhattan. My journey with computer science began with my introduction to Python as a kid, and the evolution of the video game industry throughout time. I enjoy tackling new LeetCode problems, and am particularly interested in other areas like artificial intelligence and web development! Currently, I am sharpening my skills in Swift for iOS development & Unity for desktop games. Feel free to explore my website to learn more about my work & interests. Feel free to connect with me down below!   </p>
+							<p>Hello! I am currently attending CUNY Hunter College in Manhattan. My journey with computer science began with my introduction to Python as a kid, and the evolution of the video game industry throughout time. I enjoy tackling new LeetCode problems, and am particularly interested in other areas like artificial intelligence and web development! Currently, I am sharpening my skills in Swift for iOS development & Unity for desktop games. Feel free to explore my website to learn more about my work & interests, and connect with me down below!  </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/codeimage.jpg" alt="Anthony Tommaso" /></span>
@@ -124,7 +124,7 @@
 					</header>
 					<p>Check out my resume & my LinkedIn.</p>
 					<ul class="actions special">
-						<li><a href="https://drive.google.com/file/d/1trD4LlNFkyuPVt_WCe2h0GQbPtSP6jkK/view?usp=sharing" target="_blank" class="button wide primary">Resume</a></li>
+						<li><a href="https://drive.google.com/file/d/1lM9CNyrrkSV8baOejJ4fMzTUOp7-rnr-/view?usp=sharing" target="_blank" class="button wide primary">Resume</a></li>
 						<li><a href="https://www.linkedin.com/in/anthonytommaso/" target="_blank" class="button wide">LinkedIn</a></li>
 					</ul>
 				</div>
