--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<header class="major">
 								<h2>About Me</h2>
 							</header>
-							<p>Hello! I am currently attending CUNY Hunter College in Manhattan. My journey with computer science began with my introduction to Python as a kid, and the evolution of the video game industry throughout time. I enjoy tackling new LeetCode problems, and am particularly interested in other areas like artificial intelligence and web development! Currently, I am sharpening my skills in Swift for iOS development & Unity for desktop games. Feel free to explore my website to learn more about my work & interests, and connect with me down below!  </p>
+							<p>Hello! I am currently attending CUNY Hunter College in Manhattan. My journey with computer science began with my introduction to Python as a kid, and the evolution of the video game industry throughout time. I enjoy tackling new LeetCode problems, and am particularly interested in other areas like artificial intelligence and web development! Currently, I am solidifying my understanding of Javascript & Unreal Engine 4 & 5 for multiplayer & indie gaming. It's always fun experimenting with new versions and languages. In my free time, I also play games like VALORANT or Halo. Feel free to explore my website to learn more about my work & interests, and connect with me down below!  </p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/codeimage.jpg" alt="Anthony Tommaso" /></span>
@@ -72,7 +72,7 @@
 								<h2>Soft Skills & Language Experience <br />
 								</h2>
 							</header>
-							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, <b>SCSS</b>, and I am just now experimenting with <b>HTML</b> (hence this website). I am also familar with some Frameworks such as <b>Bootstrap</b> and <b>Flask</b>. I frequently use <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
+							<p>I am proficient in <b>C++</b>, <b>Python</b>, <b>SQL</b>, <b>SCSS</b>, and I am just now experimenting with <b>HTML</b> (hence this website). I am also familar with some Frameworks such as <b>Firebase.js,</b> <b>React.js,</b> <b>GCP,</b> <b>Vercel,</b> <b>Pinecone Databases,</b> and <b>Next.js</b>. I frequently use <b>Git</b> and <b>Github</b> for my personal projects and for college projects as well. Feel free to check out my Github below!  </p>
 							<p>My coursework & projects have required me to approach things at multiple angles - and consider all <b>edge cases</b>. I am also keen in finding multiple solutions to a problem to see which is the most efficient for runtime and code cleanliness. As I work through my LeetCode & NeetCode, I continue to sharpen these skills. I also strive to clearly convey my ideas and get concepts across clearly to coworkers and my group members in order to make sure everyone understands.</p>
 							<p>I have experimently closely with new Artifical intelligence resources such as <b>ChatGPT 4o</b>, <b>Google Gemini</b>, <b>Microsoft Copilot</b>, <b>DALL-E</b>, and custom ChatGPT creation in 4o. I am enthusiastic about the future of artifical intelligence, and I cannot wait for where it takes the STEM field!</p>
 						</div>
@@ -89,25 +89,41 @@
 					<p>These are some projects I have worked / been working on. Please feel free to check them out!</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/clock.png" width = "auto" height = "auto" alt="Anthony Tommaso" /></span>
-							<h3><u>Reminder Application</u></h3>
-							<p>Created in December 2023, this was my first <b>personal</b> project created in Python. It is a reminder application that sends an email to the users email, and gives the user a desktop notification for a specific task they need to remember. It can also be set for a specific time of day.</p>
+							<span class="image fit"><img src="images/FlashBrain.png" width = "auto" height = "auto" alt="Anthony Tommaso" style="border: 3px solid #000"  /></span>
+							<h3><u>FlashBrain AI</u></h3>
+							<p> Introducing . . . FlashBrain AI! Using <b>Javascript</b>, <b>Next.JS</b>, <b>React.JS</b>, and <b>Material-UI</b> for the primary development, I created a website with <b>OpenAI API integration</b> to create flashcards for the user based off a given word / prompt. 
+								Then, 10 flashcards will be automatically created based on the users input. 
+								I also used <b>Firebase</b> for the database to store everything per user, as well as <b>Clerk Authentication</b>, to verify that each user was able to save their own flashcard sets under their own account. 
+								Furthermore, I incorporated <b>Stripe</b> to work with payments in case users want to upgrade from a basic to a pro account to access more features.</p>
+								<p>* Successfully deployed to <b>200+ visitors</b>, <b>30+ sign-ups</b> on day one.</p>
 							<ul class="actions special">
-								<li><a href="https://github.com/AntTomm/ReminderApp" target="_blank" class="button">Explore</a></li>
+								<li><a href="https://github.com/AntTomm/FlashCards" target="_blank" class="button">Try it out!</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/cyber.png" width = "auto" height = "auto" alt="Anthony Tommaso" /></span>
-							<h3><u>Password Generator v1</u></h3>
-							<p>This is a <b>WIP</b>, as it is my first C++ personal project. I am creating a program that will allow the user to generate their own password and include specific symbols, uppercase/lowercase letters, numbers, and makes sure it meets a normal password requirement. The program also randomizes the password. More features to come! </p>
+							<span class="image fit"><img src="images/VALlogo.png" width = "auto" height = "auto" alt="Anthony Tommaso" style="border: 3px solid #000" /></span>
+							<h3><u>VALO-SCOUT</u></h3>
+							<p>Passionate about <b>VALORANT?</b> VALO-Scout is your ultimate companion. 
+								Whether you're eager to stay updated on top streamers from elite teams like FNATIC or looking for agent recommendations tailored to the users playstyle, VALO-Scout has you covered. 
+								My innovative app uses <b>Retrieval-Augmented Generation (RAG)</b> technology to enhance the users gaming experience.
+								With <b>two</b> specialized <b>Pinecone databases</b>—one dedicated to tracking VALORANT streamers and another focused on agent strategies—VALO-Scout offers unparalleled insights. 
+								The <b>custom-built OpenAI bot</b>, "Brimstone," dynamically retrieves and analyzes data from these databases, delivering precise information and personalized recommendations. 
+								Elevate your VALORANT gameplay with VALO-Scout, the tool designed to keep you at the top of your game. </p>
+
+								<p>* Successfully deployed with <b>75+ users</b> on day one.</p>
+
 							<ul class="actions special">
-								<li><a href="https://github.com/AntTomm/Password-Generator" target="_blank" class="button">Explore</a></li>
+								<li><a href="https://github.com/AntTomm/VALO-SCOUT" target="_blank" class="button">Let's Go!</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/graph.png" width = "auto" height = "auto" alt="Anthony Tommaso" /></span>
 							<h3><u>Bronx Analytical Project</u></h3>
-							<p>A group project in my Python class, my team and I tackled multiple Python libraries including <b>matplotlib</b> and <b>numpy</b> to create a highlighted map of 4 specific neighborhoods in the Bronx. This also helped us to create multiple bar graphs to display the effects of carbon dioxide emissions throughout the neighborhoods. Through that, my team and I also used <b>folium</b> and <b>pandas</b> to create an interactive HTML map in Python using CSV files.</p>
+							<p>As part of a comprehensive group project in my Python class, my team and I developed a dynamic webpage using <b>GitHub</b>, <b>HTML</b>, and <b>SCSS</b> to analyze four specific neighborhoods in the Bronx: Pelham, Melrose, Wakefield, and Belmont. 
+								Over five months, we collected and analyzed data on demographics, fuel usage, greenery, income, and building distribution.
+								We leveraged multiple Python libraries, including <b>matplotlib</b> and <b>numpy</b>, to create highlighted maps and bar graphs illustrating the impact of carbon dioxide emissions in these neighborhoods. 
+								Using <b>Folium</b> and <b>pandas</b>, we designed <b>interactive HTML maps</b> that visualize this data, integrating specific information from CSV files. 
+								Additionally, I incorporated hyperlinks to individual pages, providing deeper insights into each dataset and analysis, making the project both comprehensive and user-friendly.</p>
 							<ul class="actions special">
 								<li><a href="https://github.com/AntTomm/TheBronx" target="_blank" class="button">Explore</a></li>
 							</ul>
@@ -124,7 +140,7 @@
 					</header>
 					<p>Check out my resume & my LinkedIn.</p>
 					<ul class="actions special">
-						<li><a href="https://drive.google.com/file/d/1lM9CNyrrkSV8baOejJ4fMzTUOp7-rnr-/view?usp=sharing" target="_blank" class="button wide primary">Resume</a></li>
+						<li><a href="https://drive.google.com/file/d/1k2cPzTpbIuQ2bdPOoR_okGeFBZdWzGsO/view?usp=sharing" target="_blank" class="button wide primary">Resume</a></li>
 						<li><a href="https://www.linkedin.com/in/anthonytommaso/" target="_blank" class="button wide">LinkedIn</a></li>
 					</ul>
 				</div>
